# tabler-server

./: .gitignore  CMakeLists.txt  Makefile  README.md
R/: worker.R
apps/example1/: app.R
apps/example2/: app.R
config/: tabler-server.conf
config/nginx/: tabler-server.conf
config/systemd/: tabler-server.service
docs/: DESIGN.md  index.html
docs-r/: index.html  last-updated.json  search.json
docs-r/news/: index.html
docs-r/reference/: HTML.html  NS.html  a.html  actionButton.html  addResourcePath.html  alert.html  aside.html  bindCache.html  bindEvent.html  body.html  br.html  button.html  card.html  checkboxGroupInput.html  checkboxInput.html  col1.html  col10.html  col11.html  col12.html  col2.html  col3.html  col4.html  col5.html  col6.html  col7.html  col8.html  col9.html  column.html  dateInput.html  div.html  downloadButton.html  downloadHandler.html  downloadLink.html  eventReactive.html  footer.html  getDefaultReactiveDomain.html  h1.html  h2.html  h3.html  h4.html  (+72 more)
docs/css/: docs.css  docs.min.css  docs.min.css.map
docs/emails/: index.html
docs/emails/introduction/: index.html
docs/icons/: index.html
docs/icons/libraries/: index.html
docs/icons/plugins/: index.html
docs/illustrations/: index.html
docs/js/: docs.js  docs.js.map  docs.min.js  docs.min.js.map
docs/ui/: index.html
docs/ui/base/: index.html
nginx-examples/: my.site
scripts/: install.sh
src/: admin.cpp  admin.hpp  config.cpp  config.hpp  docs.cpp  docs.hpp  http.cpp  http.hpp  log.hpp  main.cpp  metrics.hpp  proxy.cpp  proxy.hpp  worker.cpp  worker.hpp
(+95 files in other folders)
